--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
         </ul>
     </nav>
 
-    <ul class="below-nav">
-        <li>
-            <a href="">About</a>
-        </li>
-        <li>
-            <a href="">Jobs</a>
-        </li>
-    </ul>
+    <main>
+        <ul>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Jobs</a>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
