added ableton image

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <a href="">Jobs</a>
             </li>
         </ul>
+
+        <img class="ableton-img" src="img/header-ableton.avif" alt="Header-ableton">
     </main>
 </body>
 </html>
