--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
             </li>
         </ul>
 
-        <img class="ableton-img" src="img/header-ableton.avif" alt="Header-ableton">
+        <img class="ableton-img" src="img/header-ableton.avif" 
+        alt="Header-ableton">
+
+        <div>
+            <p>
+                We make <a href="">Live</a>, <a href="">Push</a> and <a href="">Link</a> — unique software and hardware for music creation 
+                and performance. With these products, our community of users creates amazing things.
+            </p>
+
+            <p>
+                Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a 
+                community of dedicated musicians, sound designers, and artists from across the world.
+            </p>
+        </div>
     </main>
 </body>
 </html>
